--- a/page principal/leso.css
+++ b/page principal/leso.css
@@ -17,49 +17,25 @@ header {
     background-color:#4070b6;
     color: white;
 }
-
-header nav ul{
+header div nav ul {
     list-style: none;
-    background-color: #4070b6;
-    justify-content: center;
-    padding: 0%;
+    display: flex;
     margin: 0;
+    padding: 0%;
+    background-color: #4070b6;
 }
-header ul li{
+header div nav ul li{
+    margin: 0px 15px;
     display: inline-block;
     position: relative;
-    margin: 0px 15px;
 }
-header ul li a{
-    display: block;
-    padding: 10px 15px;
-    text-decoration: none;
-    text-align: center;
-    font-size: 20px;
-    transition: 0.5;
+header ul li a i {
+    margin-right: 8px; /* Espacement entre l'icône et le texte */
 }
-header ul li ul.dropdown li{
-    display: block;
 
-}
-header ul li ul.dropdown{
-    width: 100%;
-    background-color: #4070b6;
-    position: absolute;
-    z-index: 999;
-    display: none;
-    border-radius: 10px 15px;
-    border: #444 1px;
-}
-header ul li a.hover{
-    background: #4070b6;
-}
-header ul li:hover ul.dropdown{
-    display: block;
-}
 
 /*la nav bar apres celle qui est dans le haeder*/
-nav ul {
+div nav ul {
     list-style: none;
     display: flex;
     font-family: 'poppins',sans-serif;
@@ -69,12 +45,12 @@ nav ul {
     margin: 0;
 }
 
-nav ul li {
+div nav ul li {
     margin: 0px 15px;
     display: inline-block;
     position: relative;
 }
-nav ul li a {
+div nav ul li a {
     color: rgb(14, 13, 13);
     text-decoration: none;
     padding: 10px 15px;
@@ -83,7 +59,7 @@ nav ul li a {
     text-align: center;
 }
 
-nav li a:hover {
+div nav li a:hover {
     text-decoration: none;
 }
 
@@ -120,11 +96,11 @@ img{
     border: solid 5px;
     margin-left: 120px;
 }
-.topnav {
+div ul.topnav {
     overflow: hidden;
     background-color: #8dc63f;
   }
-.topnav a {
+div .topnav a {
     float: left;
     display: block;
     color: #f2f2f2;
@@ -132,19 +108,22 @@ img{
     padding: 10px 15px;
     text-decoration: none;
   }
-.topnav a:hover {
+div .topnav a:hover {
     background-color: white;
     color: black;
     border-radius: 25px;
 }
+div ul li a i {
+    margin-right: 8px; /* Espacement entre l'icône et le texte */
+}
 
 /* MAIN */
 
-.tabs{
+div nav.tabs{
     margin-bottom: 20px;
 }
 
-.tab-content {
+div .tab-content {
     border: 1px solid #ccc;
     padding: 10px;
     border-radius: 5px;
@@ -157,7 +136,7 @@ img{
 .tab.active {
     display: block; /* Affiche l'onglet actif */
 }
-nav ul li a.active {
+div nav ul li a.active {
     background-color: #444; /* Couleur de l'onglet actif */
     border-radius: 25px;
 }   
