--- a/page principal/page d'inscription/inscription.css
+++ b/page principal/page d'inscription/inscription.css
@@ -19,8 +19,8 @@ body {
     max-width: 400px;
     margin: 50px auto;
     padding: 20px;
-    background: #fff;
-    border-radius: 5px;
+    background:#4070b6;
+    border-radius: 25px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
